--- a/web.config
+++ b/web.config
@@ -1,9 +1,7 @@
 <system.webServer>
         <staticContent>
-         <remove fileExtension=".json" />
-         <mime$$anonymous$$ap fileExtension=".json" mimeType="application/json; charset=UTF-8" />
-         <remove fileExtension=".unityweb" />
-         <mime$$anonymous$$ap fileExtension=".unityweb" mimeType="application/octet-stream" />
+    
+           <mime$$anonymous$$ap fileExtension=".unityweb" mimeType ="TYPE/SUBTYPE" />
         </staticContent>
      </system.webServer> 
   </configuration>
