--- a/web.config
+++ b/web.config
@@ -1,7 +1,28 @@
-<system.webServer>
-        <staticContent>
-    
-           <mime$$anonymous$$ap fileExtension=".unityweb" mimeType ="TYPE/SUBTYPE" />
-        </staticContent>
-     </system.webServer> 
-  </configuration>
+<?xml version="1.0" encoding="utf-8"?>
+<configuration>
+ 
+    <location path="." inheritInChildApplications="true">
+ 
+        <system.webServer>
+       
+            <staticContent>
+                <mimeMap fileExtension=".mem" mimeType="application/octet-stream" />
+                <mimeMap fileExtension=".data" mimeType="application/octet-stream" />
+                <mimeMap fileExtension=".memgz" mimeType="application/octet-stream" />
+                <mimeMap fileExtension=".datagz" mimeType="application/octet-stream" />
+                <mimeMap fileExtension=".unity3dgz" mimeType="application/octet-stream" />
+                <mimeMap fileExtension=".jsgz" mimeType="application/x-javascript; charset=UTF-8" />
+                <mimeMap fileExtension=".unityweb" mimeType="application/octet-stream" />
+                <mimeMap fileExtension=".unityweb" mimeType ="TYPE/SUBTYPE" />
+            </staticContent>
+ 
+            <handlers>
+                <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
+            </handlers>
+ 
+            <aspNetCore processPath="dotnet" arguments=".\DASHTI.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" />
+        </system.webServer>
+ 
+    </location>
+ 
+</configuration>
