--- a/web.config
+++ b/web.config
@@ -12,8 +12,10 @@
                 <mimeMap fileExtension=".datagz" mimeType="application/octet-stream" />
                 <mimeMap fileExtension=".unity3dgz" mimeType="application/octet-stream" />
                 <mimeMap fileExtension=".jsgz" mimeType="application/x-javascript; charset=UTF-8" />
-                <mimeMap fileExtension=".unityweb" mimeType="application/octet-stream" />
-                <mimeMap fileExtension=".unityweb" mimeType ="TYPE/SUBTYPE" />
+                <remove fileExtension=".json" />
+                <mime$$anonymous$$ap fileExtension=".json" mimeType="application/json; charset=UTF-8" />
+                <remove fileExtension=".unityweb" />
+                <mime$$anonymous$$ap fileExtension=".unityweb" mimeType="application/octet-stream" />
             </staticContent>
  
             <handlers>
