--- a/web.config
+++ b/web.config
@@ -6,16 +6,7 @@
         <system.webServer>
        
             <staticContent>
-                <mimeMap fileExtension=".mem" mimeType="application/octet-stream" />
-                <mimeMap fileExtension=".data" mimeType="application/octet-stream" />
-                <mimeMap fileExtension=".memgz" mimeType="application/octet-stream" />
-                <mimeMap fileExtension=".datagz" mimeType="application/octet-stream" />
-                <mimeMap fileExtension=".unity3dgz" mimeType="application/octet-stream" />
-                <mimeMap fileExtension=".jsgz" mimeType="application/x-javascript; charset=UTF-8" />
-                <remove fileExtension=".json" />
-                <mime$$anonymous$$ap fileExtension=".json" mimeType="application/json; charset=UTF-8" />
-                <remove fileExtension=".unityweb" />
-                <mime$$anonymous$$ap fileExtension=".unityweb" mimeType="application/octet-stream" />
+                <mimeMap fileExtension=".unityweb" mimeType ="TYPE/SUBTYPE" />
             </staticContent>
  
             <handlers>
